--- a/src/public/index.html
+++ b/src/public/index.html
@@ -50,7 +50,7 @@
     <div class="container">
     <h3 style="margin:2rem 0;"> Contáctenos:</h3>
     <form id="formChat" style="margin-top: 2rem;">
-        Id: <input id="idUsuario" type="email" name="Id" class="input-group mb-3" placeholder="Ingrese su mail" value="PP@gmail.com" required>
+        mail: <input id="idUsuario" type="email" name="Id" class="input-group mb-3" placeholder="Ingrese su mail" value="PP@gmail.com" required>
         nombre: <input id="nameInput" type="text" name="name" class="input-group mb-3" placeholder="nombre del usuario" value="Pepe" required>
         apellido: <input id="surnameInput" type="text" name="surname" class="input-group mb-3" placeholder="apellido del usuario" value="perz" required>
         edad: <input id="ageInput" type="number" name="age" class="input-group mb-3" placeholder="edad del usuario" value="34" required>
@@ -71,7 +71,7 @@
     <script src="client.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         $(document).ready(renderProducts())
         $(document).ready(()=>{
             const authorSchema = new normalizr.schema.Entity('authors',{},{idAttribute:'mail'})
@@ -100,6 +100,6 @@
             });
         })
         
-    </script>
+    </script> -->
 </body>
 </html>
